--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install pep8
   - python setup.py install
 script:
-  - pep8 --ignore=E501 *.py ec2stack
-  - pylint --rcfile=pylint.rc *.py ec2stack
+  - pep8 --ignore=E501 *.py ec2stack tests
+  - pylint --rcfile=pylint.rc *.py ec2stack tests
 
 # Force travis-ci build
