--- a/pylint.rc
+++ b/pylint.rc
@@ -33,7 +33,7 @@ load-plugins=
 # can either give multiple identifier separated by comma (,) or put this option
 # multiple time (only on the command line, not in the configuration file where
 # it should appear only once).
-disable=C0111,F0401,E1102,W0401,W0614,E0611,E1101,W0231,C0103,W0613,W0141
+disable=C0111,F0401,E1102,W0401,W0614,E0611,E1101,W0231,C0103,W0613,W0141,R0904,R0201,E1003,W0142
 
 
 
