--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ python:
 install:
   - pip install pylint
   - pip install pep8
+  - pip install coverage
   - python setup.py install
 script:
   - pep8 --ignore=E501 *.py ec2stack
   - pylint --rcfile=pylint.rc *.py ec2stack
-  - nosetests
+  - nosetests --with-coverage --cover-erase --cover-package=ec2stack --cover-html
 
 # Force travis-ci build
