--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,16 +1,31 @@
 include HISTORY.rst
 include LICENSE
 include README.rst
-include conf/ec2stack.conf
 include ec2stack/__init__.py
 include ec2stack/__main__.py
+include ec2stack/configure.py
 include ec2stack/controllers/__init__.py
 include ec2stack/controllers/default.py
 include ec2stack/core.py
-include ec2stack/models.py
-include ec2stack/users/__init__.py
-include ec2stack/users/models.py
+include ec2stack/errors.py
+include ec2stack/helpers.py
+include ec2stack/models/__init__.py
+include ec2stack/models/users/__init__.py
+include ec2stack/models/users/models.py
+include ec2stack/providers/__init__.py
+include ec2stack/providers/cloudstack/__init__.py
+include ec2stack/providers/cloudstack/disk_offerings.py
+include ec2stack/providers/cloudstack/images.py
+include ec2stack/providers/cloudstack/instances.py
+include ec2stack/providers/cloudstack/keypairs.py
+include ec2stack/providers/cloudstack/passwords.py
+include ec2stack/providers/cloudstack/requester.py
+include ec2stack/providers/cloudstack/security_groups.py
+include ec2stack/providers/cloudstack/service_offerings.py
+include ec2stack/providers/cloudstack/volumes.py
+include ec2stack/providers/cloudstack/zones.py
+include ec2stack/services.py
 include manager.py
 include migrations/env.py
-include migrations/versions/1ee01f19f72f_.py
+include migrations/versions/1b1a5f6b42a_.py
 include setup.py
