--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
 - pip install pylint
 - pip install pep8
 - pip install coverage
+- pip install factory-boy==1.3.0
+- pip install mock
 - python setup.py install
 script:
 - pep8 --ignore=E501 *.py ec2stack
