--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - pip install coverage
 - pip install factory-boy==1.3.0
 - pip install mock
+- pip install coveralls
 - python setup.py install
 script:
 - pep8 --ignore=E501 *.py ec2stack
@@ -14,6 +15,7 @@ script:
 - nosetests --with-coverage --cover-erase --cover-package=ec2stack --cover-html
 after_success:
 - '[ "${TRAVIS_BRANCH}" = "master" ]  && bash .deploy-coverage.sh'
+- coveralls
 env:
   global:
     secure: dUNHx6q6ziCb7pXr/fb/OZS8fyB14RF8/rEEggBEzgn2L7KM78LVFyFNmW+QZ7lvJpZ806mfjdmvmz0DpR1k6kfokrr6txBzHDMEUebc9RnVnmsoNNWIRLiV/+YzUsVeFixogVz/z06yaycOC8knVExcNfGMfmiBg5PextydXSQ=
