--- a/pylint.rc
+++ b/pylint.rc
@@ -236,7 +236,7 @@ max-locals=20
 max-returns=6
 
 # Maximum number of branch for function / method body
-max-branchs=12
+max-branches=16
 
 # Maximum number of statements in function / method body
 max-statements=50
