Possible solution to modify ec2stack-configure to be run non-interactively #62

--- a/migrations/alembic.ini
+++ b/migrations/alembic.ini
@@ -26,12 +26,12 @@ qualname =
 
 [logger_sqlalchemy]
 level = WARN
-handlers =
+handlers = console
 qualname = sqlalchemy.engine
 
 [logger_alembic]
-level = INFO
-handlers =
+level = WARN
+handlers = console
 qualname = alembic
 
 [handler_console]
