--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,20 +19,21 @@ jobs:
           architecture: 'x64'
           
       - name: Install Build Dependencies
-        run: |
-           pip install pylint
-           pip install pep8
-           pip install coverage
-           pip install factory-boy==1.3.0
-           pip install mock
-           pip install coveralls
-           python setup.py install
+      - run: pip install pylint
+      - run: pip install pep8
+      - run: pip install coverage
+      - run: pip install pylint
+      - run: pip install pep8
+      - run: pip install coverage
+      - run: pip install factory-boy==1.3.0
+      - run: pip install mock
+      - run: pip install coveralls
+      - run : python setup.py install
       
       - name: Run Script
-        run: |
-           pep8 --ignore=E501 *.py ec2stack
-           pylint --rcfile=pylint.rc *.py ec2stack
-           nosetests --with-coverage --cover-erase --cover-package=ec2stack --cover-html
+      - run: pep8 --ignore=E501 *.py ec2stack
+      - run: pylint --rcfile=pylint.rc *.py ec2stack
+      - run: nosetests --with-coverage --cover-erase --cover-package=ec2stack --cover-html
           
       - name: after success 
-           coveralls       
+      - run:  coveralls       
