--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
       - run: pip install coverage
       - run: pip install factory-boy==1.3.0
       - run: pip install mock
-      - run: pip install coveralls      
+      - run: pip install coveralls
+      - run: pip install nosetests3 
       - run: pep8 --ignore=E501 *.py ec2stack      
       - run: nosetests3 --with-coverage --cover-erase --cover-package=ec2stack --cover-html    
       - run: coveralls       
