--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
+          python-version: '2.7'
           architecture: 'x64'
+          
       - run: pip install pylint
       - run: pip install pep8
       - run: pip install coverage
@@ -26,7 +27,8 @@ jobs:
       - run: pip install factory-boy==1.3.0
       - run: pip install mock
       - run: pip install coveralls
-      - run: pip install nosetests
-      - run: pep8 --ignore=E501 *.py ec2stack      
-      - run: nosetests --with-coverage --cover-erase --cover-package=ec2stack --cover-html    
+      - run: python setup.py install
+      - run: pep8 --ignore=E501 *.py ec2stack
+      - run: pylint --rcfile=pylint.rc *.py ec2stack
+      - run: nosetests --with-coverage --cover-erase --cover-package=ec2stack --cover-html   
       - run: coveralls       
